--- a/tasks/OSSec/Win32NT/osquery.yml
+++ b/tasks/OSSec/Win32NT/osquery.yml
@@ -2,6 +2,7 @@
 - name: Install chocolatey
   win_chocolatey:
     name: 'chocolatey'
+    source: 'http://chocolatey.org'
     state: 'downgrade'
     version: '{{ win_chocolatey_version }}'
     proxy_url: '{{ os_proxy_server | default(omit,true) }}'
@@ -15,6 +16,7 @@
 - name: Osquery software installation
   win_chocolatey:
     name: 'osquery'
+    source: 'http://chocolatey.org'
     state: 'latest'
     timeout: '60'
     proxy_url: '{{ os_proxy_server | default(omit,true) }}'
