--- a/tasks/Config/Linux/RedHat/7/Rsyslog.yml
+++ b/tasks/Config/Linux/RedHat/7/Rsyslog.yml
@@ -18,7 +18,7 @@
     - '  constant(value="\",\"procid\":\"") property(name="PROCID")'
     - '  constant(value="\"}")'
     - '}'
-    - 'action(type="omfwd" target="{{ syslog_server | list | random }}" port="{{ syslog_port }}" protocol="{{ syslog_protocol | lower }}" template="gelf")'
+    - 'action(type="omfwd" target="{{ syslog_server | list | random(seed=inventory_hostname) }}" port="{{ syslog_port }}" protocol="{{ syslog_protocol | lower }}" template="gelf")'
   register: conf_update
 
 - name: Ignore flooded logs with systemd messages
