--- a/tasks/Config/Linux/Environment.yml
+++ b/tasks/Config/Linux/Environment.yml
@@ -11,8 +11,8 @@
     state: present
     line: '{{ item }}'
   with_items:
-    - HISTSIZE=50
-    - TMOUT=600
+    - 'HISTSIZE={{ os_linux_shell_history }}'
+    - 'TMOUT={{ os_linux_shell_timeout }}'
     - PROMPT_COMMAND='history -a >(tee -a ~/.bash_history | logger -t "$USER ${SSH_CLIENT%% *} $PWD")'
 
 - name: Disable Vim tracking
@@ -95,7 +95,7 @@
     state: present
     line: '{{ item }}'
   with_items:
-    - 'TMOUT=600'
+    - 'TMOUT={{ os_linux_shell_timeout }}'
     - "IP=$(/sbin/ifconfig eth0|awk '/inet / {print $2}'|cut -d ':' -f 2)"
     - 'export PS1="[\[\033[01;31m\]\u\[\033[00m\]@\[\033[01;32m\]\h\[\033[00m\] \[\033[01;36m\]\$IP \[\033[01;33m\]\W\[\033[00m\]]\[\033[00;34m\]$\[\033[00m\]"'
 
@@ -111,3 +111,17 @@
 - name: Set its SELinux context
   shell: chcon --reference /sbin/ifup /sbin/ifup-local
   when: os_linux_disable_tcp_offloading
+
+- name: "Ensure default user umask is {{ os_linux_default_umask }} or more restrictive"
+  block:
+    - name: Set default user umask is {{ os_linux_default_umask }} - /etc/bashrc"
+      replace:
+        path: '/etc/bashrc'
+        regexp: '(^\s+umask) 002'
+        replace: '\1 {{ os_linux_default_umask }}'
+    - name: Set default user umask is {{ os_linux_default_umask }} - /etc/profile"
+      replace:
+        path: '/etc/profile'
+        regexp: '(^\s+umask) 002'
+        replace: '\1 {{ os_linux_default_umask }}'
+  when: os_linux_default_umask != '002'
