--- a/tasks/Config/Linux/RedHat/7/Rsyslog.yml
+++ b/tasks/Config/Linux/RedHat/7/Rsyslog.yml
@@ -16,6 +16,8 @@
     - '  constant(value="\",\"facility\":\"") property(name="syslogfacility")'
     - '  constant(value="\",\"appname\":\"") property(name="APP-NAME")'
     - '  constant(value="\",\"procid\":\"") property(name="PROCID")'
+    - '  constant(value="\",\"enviornment\":\"") property(name="{{ environments | default("ENV") | upper }}")'
+    - '  constant(value="\",\"group\":\"") property(name="{{ group_names[0] | default("GROUP") | upper }}")'
     - '  constant(value="\"}")'
     - '}'
     - 'action(type="omfwd" target="{{ syslog_server | list | random(seed=inventory_hostname) }}" port="{{ syslog_port }}" protocol="{{ syslog_protocol | lower }}" template="gelf")'
