modified:   tasks/Config/Linux/RedHat/6/Rsyslog.yml 	modified:   tasks/Config/Linux/RedHat/7/Rsyslog.yml 	modified:   templates/nxlog.conf.j2

--- a/tasks/Config/Linux/RedHat/6/Rsyslog.yml
+++ b/tasks/Config/Linux/RedHat/6/Rsyslog.yml
@@ -28,6 +28,8 @@
     - '$PreserveFQDN on'
     - 'template(name="gelf" type="list") {'
     - '  constant(value="{\"version\":\"1.1\",")'
+    - '  constant(value="\"enviornment\":\"{{ environments | default("ENV") | upper }}\",")'
+    - '  constant(value="\"group\":\"{{ group_names[0] | default("GROUP") | upper }}\",")'
     - '  constant(value="\"SourceModuleName\":\"in_rsyslog\",")'
     - '  constant(value="\"host\":\"") property(name="hostname" caseConversion="upper")'
     - '  constant(value="\",\"short_message\":\"") property(name="msg" format="json")'
@@ -36,8 +38,6 @@
     - '  constant(value="\",\"facility\":\"") property(name="syslogfacility")'
     - '  constant(value="\",\"appname\":\"") property(name="APP-NAME")'
     - '  constant(value="\",\"procid\":\"") property(name="PROCID")'
-    - '  constant(value="\",\"enviornment\":\"") property(name="{{ environments | default("ENV") | upper }}")'
-    - '  constant(value="\",\"group\":\"") property(name="{{ group_names[0] | default("GROUP") | upper }}")'
     - '  constant(value="\"}")'
     - '}'
     - 'action(type="omfwd" target="{{ syslog_server | list | random(seed=inventory_hostname) }}" port="{{ syslog_port }}" protocol="{{ syslog_protocol | lower }}" template="gelf")'
