--- a/tasks/Harden/Win32NT/firewall.yml
+++ b/tasks/Harden/Win32NT/firewall.yml
@@ -2,8 +2,8 @@
 - name: Allow ping in firewall
   win_firewall_rule:
     name: 'File and Printer Sharing (Echo Request - ICMPv4-In)'
-    enable: yes
-    state: present
-    protocol: ICMPv4
-    action: allow
-    direction: in
+    enable: 'yes'
+    state: 'present'
+    protocol: 'ICMPv4'
+    action: 'allow'
+    direction: 'in'
