--- a/tasks/Harden/Win32NT.yml
+++ b/tasks/Harden/Win32NT.yml
@@ -1,6 +1,6 @@
 ---
 - include: '{{ ansible_system }}/audit.yml'
-  when: os_audit
+  when: os_audit | bool
 
 - include: '{{ ansible_system }}/password.yml'
 
