--- a/tasks/Config/Linux.yml
+++ b/tasks/Config/Linux.yml
@@ -4,7 +4,7 @@
 - include: '{{ ansible_system }}/{{ ansible_os_family }}/{{ ansible_distribution_major_version }}/Service.yml'
 
 - include: '{{ ansible_system }}/{{ ansible_os_family }}/{{ ansible_distribution_major_version }}/Rsyslog.yml'
-  when: syslog
+  when: syslog | bool
 
 - include: '{{ ansible_system }}/Environment.yml'
 
@@ -25,4 +25,4 @@
   async: 1
   poll: 0
   ignore_errors: true
-  when: grub.changed
+  when: grub is changed
