--- a/tasks/Config/Linux/RedHat/7/Service.yml
+++ b/tasks/Config/Linux/RedHat/7/Service.yml
@@ -8,7 +8,7 @@
   poll: 0
   with_items:
     - "{{ vars['disable_service_' + ansible_os_family + '_' + ansible_distribution_major_version] }}"
-  when: os_linux_disable_unused_service
+  when: os_linux_disable_unused_service | bool
   ignore_errors: yes
 
 - name: Ensure used service is enabled
@@ -20,5 +20,5 @@
   poll: 0
   with_items:
     - "{{ vars['enabled_service_' + ansible_os_family + '_' + ansible_distribution_major_version] }}"
-  when: os_linux_enables_needed_service
+  when: os_linux_enables_needed_service | bool
   ignore_errors: yes
