--- a/tasks/Config/Win32NT/rss.yml
+++ b/tasks/Config/Win32NT/rss.yml
@@ -1,4 +1,4 @@
 ---
 - name: Disable Receive-Side Scaling
   win_command: 'netsh int tcp set global rss=disabled'
-  when: os_win_disable_rss
+  when: os_win_disable_rss | bool
