--- a/tasks/Harden/Linux/RedHat/Security.yml
+++ b/tasks/Harden/Linux/RedHat/Security.yml
@@ -44,7 +44,7 @@
     dest: /etc/ssh/sshd_config
     regexp: '^PermitRootLogin'
     line: 'PermitRootLogin no'
-  when: os_linux_disable_RootLogin
+  when: os_linux_disable_RootLogin | bool
 
 - name: Reload sshd service
   systemd:
@@ -55,7 +55,7 @@
   async: 1
   poll: 0
   when:
-    - result.changed
+    - result is changed
     - ansible_distribution_major_version|int > 6
 
 - name: Reload sshd service
@@ -66,5 +66,5 @@
   async: 1
   poll: 0
   when:
-    - result.changed
+    - result is changed
     - ansible_distribution_major_version|int == 6
