modified:   meta/main.yml 	modified:   tasks/Exporter/Linux.yml 	modified:   tasks/Exporter/Win32NT.yml 	modified:   tasks/Harden/Linux.yml 	deleted:    tasks/Harden/Linux/Auditbeat.yml

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -52,6 +52,20 @@ galaxy_info:
     # NOTE: A tag is limited to a single word comprised of alphanumeric characters.
     #       Maximum 20 tags per role.
 
-dependencies: []
+dependencies:
   # List your role dependencies here, one per line. Be sure to remove the '[]' above,
   # if you add dependencies to this list.
+  - role: 'ansible-role-OS-beats'
+    vars:
+      beats_type: 'audit'
+      beats_version: '{{ os_auditbeat_version }}'
+      beats_port_arg: '{{ os_auditbeat_port_arg }}'
+      auditbeat_audit_rules: '{{ os_linux_audit_rules }}'
+      beats_output_type: 'logstash'
+      beats_output_port: '{{ os_auditbeat_output.port }}'
+      beats_output_auth: false
+      beats_output_host: '{{ os_auditbeat_output.host }}'
+    when:
+      - os_harden | bool
+      - os_audit | bool
+      - os_audit_type == 'auditbeat'
