modified:   tasks/Exporter/Win32NT.yml

--- a/tasks/Exporter/Win32NT.yml
+++ b/tasks/Exporter/Win32NT.yml
@@ -90,7 +90,7 @@
       cache-control: 'no-cache'
   environment:
     no_proxy: '{{ item.client }}'
-  loop: "{{ check_consul_reg.results | json_query('[*].{client:item,status:status}') }}"
+  loop: "{{ check_consul_reg.results | json_query('[*].{client:item,status:status_code}') }}"
   when:
     - consul_public_register | bool
     - item.status == 405
