--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -18,6 +18,7 @@ osquery_repo_url: 'http://cache.omygods.com/osquery'
 
 ossec_agent_dependent_packages:
   - 'expect'
+  - 'python-docker'
   - 'openscap-scanner'
   - 'openssl'
   - 'osquery'
