--- a/tasks/Datadisc/Linux.yml
+++ b/tasks/Datadisc/Linux.yml
@@ -1,30 +1,16 @@
 ---
-- name: Check if device has a partition already
-  shell: '/sbin/partprobe -ds {{ os_linux_disc_device }} | /bin/grep -c partitions'
-  register: check_partitions
-  no_log: true
-  changed_when: false
-  failed_when: false
-  when: os_linux_disc_device is defined
-
 - name: Logical Volume operation
   block:
-    - name: Create a new primary partition for LVM
-      parted:
-        device: '{{ os_linux_disc_device }}'
-        number: 1
-        flags: [ lvm ]
-        state: present
-    - name: Create a volume group on additional disc
+    - name: 'Create a volume group on /dev/{{ os_linux_disc_device }}'
       lvg:
         vg: '{{ os_linux_vg }}'
-        pvs: '{{ os_linux_disc_device }}1'
-    - name: Create a logical volume the size of all remaining space in the volume group
+        pvs: '/dev/{{ os_linux_disc_device }}'
+    - name: 'Create a logical volume the size of {{ os_linux_lv_size }} space in the volume group'
       lvol:
         vg: '{{ os_linux_vg }}'
         lv: '{{ os_linux_lv }}'
         size: '{{ os_linux_lv_size }}'
-    - name: Create a xfs filesystem on logical volume
+    - name: 'Create a {{ os_linux_fstype | upper }} filesystem on logical volume'
       filesystem:
         fstype: '{{ os_linux_fstype }}'
         dev: '/dev/{{ os_linux_vg }}/{{ os_linux_lv }}'
@@ -36,5 +22,5 @@
         opts: '{{ os_linux_fsopts }}'
         state: 'mounted'
   when:
-    - check_partitions is defined
-    - check_partitions.stdout == '0'
+    - ansible_devices[os_linux_disc_device].partitions | length == 0
+    - ansible_devices[os_linux_disc_device].links.ids | length == 0
